--- a/Projekt A/index.html
+++ b/Projekt A/index.html
@@ -34,9 +34,11 @@
 
 <div class="container">
     <div id="cocktail-details"></div>
-    <div id="cocktail-results"></div>
     <div id="ingredient-chart"></div> <!-- graf -->
     <div id="ingredient-results"></div>
+    <div id="cocktail-results"></div>
+    <div id="cocktail-non-alcoholic"></div>
+    <div id="cocktail-alcoholic"></div>
 </div>
     <div id="results"></div>
 
